tagit bort testklasser

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -14,7 +14,9 @@
 
             <main>
                 <header>
-                    <h2>Diggaren</h2>
+                    <h2>Diggaren
+                    <img id ="headerimg" src="views/be-with-records.v2.webp">
+                    </h2> 
                 </header>
             </main>
 
@@ -29,46 +31,10 @@
                 <p>Grupp 12 har tagit fram tjänsten Diggaren. Diggaren vänder sig till alla de personer som regelbundet använder radio men även Spotify för att lyssna på musik. Tjänsten låter användaren att på ett visuellt tilltalande sätt bläddra bland ett urval av radiokanaler, se vad som spelas nu samt vad som nyss spelades. Tjänsten låter även användaren hitta låtarna på Spotify, så att man kan lyssna på favoritlåtarna man hör på radio - om och om igen.  </p>
             </div>
 
-            <div class="card">
-                <img src="views/caaat.gif" alt="cat">
-                <div class="container">
-                  <h4>Anna</h4>
-                  <p>Under projektet har Anna arbetat tillsammans med Emma på backend delen. Båda studerar Sys årkurs 2</p>
-                </div>
-            </div> 
-
-            <div class="card">
-                <img src="views/caaat.gif" alt="cat">
-                <div class="container">
-                  <h4>Emma</h4>
-                  <p>Under projektet har Anna arbetat tillsammans med Emma på backend delen. Båda studerar Sys årkurs 2</p>
-                </div>
-            </div> 
-
-            <div class="card">
-                <img src="views/caaat.gif" alt="cat">
-                <div class="container">
-                  <h4>Christopher</h4>
-                  <p>Under projektet har Christopher och Jakob främst arbetat på front en utveckling</p>
-                </div>
-            </div> 
-
-            <div class="card">
-                <img src="views/caaat.gif" alt="cat">
-                <div class="container">
-                  <h4>Jakob</h4>
-                  <p>Under projektet har Christopher och Jakob främst arbetat på front en utveckling</p>
-                </div>
-            </div> 
+            
             
 
 
-
-            <footer>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc leo ligula, aliquam ut libero vitae, dapibus scelerisque ante. Suspendisse turpis orci, dapibus vitae hendrerit eu, pulvinar in risus. Donec ullamcorper magna nec dui semper egestas. Maecenas ac erat vitae libero pharetra vestibulum ut et metus. Vestibulum mauris sapien, ullamcorper eu imperdiet in, eleifend sed ante. Suspendisse id tristique orci, eget blandit arcu. Integer volutpat lorem vitae nibh dapibus, vel suscipit enim suscipit. Vestibulum ac sem vestibulum, mattis orci vel, euismod enim. Nam fringilla semper justo. Sed rutrum, odio nec imperdiet placerat, eros nibh luctus elit, sed lobortis metus tellus at quam. Integer tempus, nibh sit amet mollis interdum, sem erat ultrices tortor, a convallis leo nisi eget nisi. 
-                </p>
-            </footer>
 
             <script src="script.js"></script>
     </body>
