--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,9 @@
     <main>
         <div class="container">
             <header>
-                <h1>Welcome to Diggaren!</h1>
+              <h2>Diggaren
+              <img id ="headerimg" src="views/be-with-records.v2.webp">
+              </h2> 
             </header>
         </div>
 
