--- a/src/main/resources/static/api.html
+++ b/src/main/resources/static/api.html
@@ -14,7 +14,9 @@
 
             <main>
                 <header>
-                    <h2>Diggaren</h2>
+                    <h2>Diggaren
+                    <img id ="headerimg" src="views/be-with-records.v2.webp">
+                    </h2> 
                 </header>
             </main>
 
@@ -68,9 +70,7 @@
             </div>
 
             <footer>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc leo ligula, aliquam ut libero vitae, dapibus scelerisque ante. Suspendisse turpis orci, dapibus vitae hendrerit eu, pulvinar in risus. Donec ullamcorper magna nec dui semper egestas. Maecenas ac erat vitae libero pharetra vestibulum ut et metus. Vestibulum mauris sapien, ullamcorper eu imperdiet in, eleifend sed ante. Suspendisse id tristique orci, eget blandit arcu. Integer volutpat lorem vitae nibh dapibus, vel suscipit enim suscipit. Vestibulum ac sem vestibulum, mattis orci vel, euismod enim. Nam fringilla semper justo. Sed rutrum, odio nec imperdiet placerat, eros nibh luctus elit, sed lobortis metus tellus at quam. Integer tempus, nibh sit amet mollis interdum, sem erat ultrices tortor, a convallis leo nisi eget nisi. 
-                </p>
+                <p>Grupp 12 - Diggaren</p>     
             </footer>
 
             <script src="script.js"></script>
