--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,9 +9,7 @@
     <main>
         <div class="container">
             <header>
-              <h2>Diggaren
-              <img id ="headerimg" src="views/be-with-records.v2.webp">
-              </h2> 
+              <h1>Diggaren</h1> 
             </header>
         </div>
 
